--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "babel-core": "^4.7.12",
     "babel-loader": "^4.2.0",
     "babel-runtime": "^4.7.12",
+    "eslint": "^0.17.1",
+    "eslint-plugin-react": "^1.6.0",
     "mori": "^0.3.2",
     "ramda": "^0.11.0",
     "react": "^0.13.0",
