--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "start": "NODE_ENV=dev node dev-server.js"
   },
   "devDependencies": {
-    "babel-core": "^4.7.12",
-    "babel-loader": "^4.2.0",
-    "babel-runtime": "^4.7.12",
-    "eslint": "^0.17.1",
-    "eslint-plugin-react": "^1.6.0",
+    "babel": "^5.0.8",
+    "babel-core": "^5.0.8",
+    "babel-loader": "^5.0.0",
+    "babel-runtime": "^5.0.8",
+    "eslint": "^0.18.0",
+    "eslint-plugin-react": "^2.0.2",
     "mori": "^0.3.2",
-    "ramda": "^0.11.0",
-    "react": "^0.13.0",
+    "ramda": "^0.13.0",
+    "react": "^0.13.1",
     "react-hot-loader": "^1.2.3",
     "webpack": "^1.7.3",
     "webpack-dev-server": "^1.7.0"
