--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "parser": "babel-eslint",
     "plugins": [
         "react"
     ],
@@ -13,8 +14,9 @@
     },
     "rules": {
         "quotes": [2, "single", "avoid-escape"],
+        "strict": 0,
 
-        "react/display-name": 1,
+        "react/display-name": 0,
         "react/jsx-quotes": 1,
         "react/jsx-no-undef": 1,
         "react/jsx-uses-react": 1,
