--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "babel": "^5.0.8",
     "babel-core": "^5.0.8",
+    "babel-eslint": "^2.0.2",
     "babel-loader": "^5.0.0",
     "babel-runtime": "^5.0.8",
     "eslint": "^0.18.0",
