--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "parser": "babel-eslint",
     "plugins": [
-        "react"
+        "react",
+        "mocha"
     ],
     "env": {
         "browser": true,
@@ -28,5 +29,11 @@
         "react/react-in-jsx-scope": 1,
         "react/self-closing-comp": 1,
         "react/wrap-multilines": 1
+    },
+    "globals": {
+        "describe": true,
+        "it": true,
+        "beforeEach": true,
+        "afterEach": true
     }
 }
