--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=dev node dev-server.js",
-    "dev": "mocha --require babel/register --watch"
+    "dev": "mocha -r babel/register -w",
+    "test": "isparta cover _mocha --include src/**/*.es6 --report lcovonly -- test/**/*.es6 -r babel/register"
   },
   "devDependencies": {
     "babel": "^5.0.8",
@@ -18,6 +19,8 @@
     "eslint": "^0.18.0",
     "eslint-plugin-mocha": "^0.2.2",
     "eslint-plugin-react": "^2.0.2",
+    "isparta": "roman01la/isparta#include-opt",
+    "istanbul": "^0.3.13",
     "mocha": "^2.2.1",
     "mocha-lcov-reporter": "0.0.2",
     "mori": "^0.3.2",
