--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "NODE_ENV=dev node dev-server.js",
     "dev": "mocha -r babel/register -w",
-    "test": "isparta cover _mocha --include src/**/*.es6 --report lcovonly -- test/**/*.es6 -r babel/register \
-        && cat ./coverage/lcov.info | coveralls && rm -r ./coverage"
+    "test": "isparta cover _mocha --include src/**/*.es6 --report lcovonly -- test/**/*.es6 -r babel/register && cat ./coverage/lcov.info | coveralls && rm -r ./coverage"
   },
   "devDependencies": {
     "babel": "^5.0.8",
