--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "test": "isparta cover _mocha --include src/**/*.es6 src/**/*.jsx --report lcovonly -- test/**/*.es6 test/**/*.jsx -r babel/register && cat ./coverage/lcov.info | coveralls && rm -r ./coverage"
   },
   "devDependencies": {
-    "babel": "^5.0.8",
-    "babel-core": "^5.0.8",
-    "babel-eslint": "^2.0.2",
+    "anybar-webpack": "^1.0.7",
+    "babel": "^5.1.8",
+    "babel-core": "^5.1.8",
+    "babel-eslint": "^3.0.1",
     "babel-loader": "^5.0.0",
-    "babel-runtime": "^5.0.8",
+    "babel-runtime": "^5.1.8",
     "coveralls": "^2.11.2",
-    "eslint": "^0.18.0",
+    "eslint": "^0.19.0",
     "eslint-plugin-mocha": "^0.2.2",
-    "eslint-plugin-react": "^2.0.2",
-    "isparta": "roman01la/isparta#include-opt",
+    "eslint-plugin-react": "^2.1.0",
+    "isparta": "^3.0.3",
     "istanbul": "^0.3.13",
-    "jsdom": "^4.1.0",
-    "mocha": "^2.2.1",
+    "jsdom": "^4.4.0",
+    "mocha": "^2.2.4",
     "mocha-jsdom": "^0.3.0",
     "mocha-lcov-reporter": "0.0.2",
     "mori": "^0.3.2",
     "ramda": "^0.13.0",
     "react": "^0.13.1",
-    "react-hot-loader": "^1.2.3",
-    "webpack": "^1.7.3",
-    "webpack-dev-server": "^1.7.0"
+    "react-hot-loader": "^1.2.4",
+    "webpack": "^1.8.4",
+    "webpack-dev-server": "^1.8.0"
   }
 }
