--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
         "quotes": [2, "single", "avoid-escape"],
         "strict": 0,
         "no-unused-expressions": false,
+        "no-underscore-dangle": false,
 
         "react/display-name": 0,
         "react/jsx-quotes": 1,
