--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "devDependencies": {
     "anybar-webpack": "^1.0.7",
-    "babel": "^5.2.15",
-    "babel-core": "^5.2.15",
-    "babel-eslint": "^3.0.1",
+    "babel": "^5.2.17",
+    "babel-core": "^5.2.17",
+    "babel-eslint": "^3.1.1",
     "babel-loader": "^5.0.0",
-    "babel-runtime": "^5.2.15",
+    "babel-runtime": "^5.2.17",
     "coveralls": "^2.11.2",
     "eslint": "^0.20.0",
     "eslint-plugin-mocha": "^0.2.2",
@@ -27,10 +27,11 @@
     "mocha-jsdom": "^0.3.0",
     "mocha-lcov-reporter": "0.0.2",
     "mori": "^0.3.2",
+    "mori-transit": "^1.0.1",
     "page": "^1.6.3",
     "ramda": "^0.13.0",
     "react": "^0.13.2",
-    "react-hot-loader": "^1.2.6",
+    "react-hot-loader": "^1.2.7",
     "todomvc-app-css": "^2.0.1",
     "webpack": "^1.8.11",
     "webpack-dev-server": "^1.8.2"
